start_project/local/logs/project.log
2017-07-01T05:22:18.494Z - normal: Load ~/.CocosCreator/settings.json
2017-07-01T05:22:18.498Z - normal: checking language setting...
2017-07-01T05:22:18.498Z - normal: Language: zh
2017-07-01T05:22:19.785Z - success: protocol editor-framework registered
2017-07-01T05:22:19.785Z - success: protocol app registered
2017-07-01T05:22:19.785Z - success: protocol theme registered
2017-07-01T05:22:19.785Z - success: protocol profile registered
2017-07-01T05:22:19.785Z - success: protocol packages registered
2017-07-01T05:22:19.785Z - success: protocol unpack registerred
2017-07-01T05:22:19.785Z - success: protocol disable-commonjs registerred
2017-07-01T05:22:19.922Z - normal: connected!
2017-07-01T05:22:19.924Z - normal: Check project E:\games\start_project
2017-07-01T05:22:19.926Z - normal: Initializing Cocos2d
2017-07-01T05:22:20.154Z - normal: Initializing Asset Database
2017-07-01T05:22:20.178Z - success: protocol uuid registerred
2017-07-01T05:22:20.178Z - success: protocol db registerred
2017-07-01T05:22:20.178Z - success: protocol thumbnail registerred
2017-07-01T05:22:20.178Z - normal: Loading editor/builtin packages
2017-07-01T05:22:20.193Z - success: anysdk loaded
2017-07-01T05:22:20.288Z - success: assets loaded
2017-07-01T05:22:20.293Z - success: builder loaded
2017-07-01T05:22:20.295Z - success: hierarchy loaded
2017-07-01T05:22:20.297Z - success: inspector loaded
2017-07-01T05:22:20.298Z - success: keystore loaded
2017-07-01T05:22:20.301Z - success: node-library loaded
2017-07-01T05:22:20.301Z - success: package-asset loaded
2017-07-01T05:22:20.303Z - success: preferences loaded
2017-07-01T05:22:20.312Z - success: project-importer loaded
2017-07-01T05:22:20.314Z - success: project-settings loaded
2017-07-01T05:22:20.316Z - success: ui-kit loaded
2017-07-01T05:22:20.318Z - success: ui-grid loaded
2017-07-01T05:22:20.320Z - success: scene loaded
2017-07-01T05:22:20.321Z - success: sprite-editor loaded
2017-07-01T05:22:20.323Z - success: store loaded
2017-07-01T05:22:20.327Z - success: timeline loaded
2017-07-01T05:22:20.327Z - normal: Loading builtin packages
2017-07-01T05:22:20.329Z - success: asset-db-debugger loaded
2017-07-01T05:22:20.330Z - success: code-editor loaded
2017-07-01T05:22:20.330Z - success: color-picker loaded
2017-07-01T05:22:20.332Z - success: console loaded
2017-07-01T05:22:20.334Z - success: package-manager loaded
2017-07-01T05:22:20.339Z - success: sdkbox loaded
2017-07-01T05:22:20.341Z - success: tester loaded
2017-07-01T05:22:20.342Z - success: ui-kit-preview-extra loaded
2017-07-01T05:22:20.343Z - success: ui-kit-preview loaded
2017-07-01T05:22:20.344Z - success: ui-tree loaded
2017-07-01T05:22:21.001Z - normal: Initializing project E:\games\start_project
2017-07-01T05:22:21.008Z - normal: Loading packages
2017-07-01T05:22:21.013Z - normal: Watching packages
2017-07-01T05:22:21.023Z - normal: Run Application
2017-07-01T05:22:21.643Z - success: preview server running at http://localhost:7456
2017-07-01T05:22:21.643Z - normal: Compiling scripts...
2017-07-01T05:22:22.721Z - normal: Compiled project javascript file successfully
2017-07-01T05:22:25.848Z - normal: 1.5.1
2017-07-01T06:40:26.224Z - normal: Compiled project javascript file successfully
2017-07-01T06:40:28.977Z - normal: Compiled project javascript file successfully
2017-07-01T06:40:34.914Z - normal: Compiled project javascript file successfully
2017-07-01T06:40:38.330Z - normal: Compiled project javascript file successfully
2017-07-01T06:56:09.057Z - normal: Compiled project javascript file successfully
2017-07-01T06:56:09.425Z - warn: Failed to set property player<player> to [object Object] at __scriptAsset, TypeError: Cannot set property __scriptAsset of #<cc_Component> which has only a getter
    at setAsset (D:\cocosCreator\CocosCreator\resources\app.asar\editor\page\scene-utils\set-property-by-path.js:1:804)
    at setByUuid (D:\cocosCreator\CocosCreator\resources\app.asar\editor\page\scene-utils\set-property-by-path.js:1:1014)
    at _setPropertyByPath (D:\cocosCreator\CocosCreator\resources\app.asar\editor\page\scene-utils\set-property-by-path.js:1:1899)
    at setDeepPropertyByPath (D:\cocosCreator\CocosCreator\resources\app.asar\editor\page\scene-utils\set-property-by-path.js:1:4019)
    at Object.Editor.setPropertyByPath (D:\cocosCreator\CocosCreator\resources\app.asar\editor\page\scene-utils\set-property-by-path.js:1:5535)
    at Object.setProperty (D:\cocosCreator\CocosCreator\resources\app.asar\editor\page\scene-utils\index.js:1:14676)
    at editor-scene.scene:set-property (file:///D:/cocosCreator/CocosCreator/resources/app.asar/editor/builtin/scene/panel/scene.js:1:8582)
    at Object.Panel._dispatch (D:\cocosCreator\CocosCreator\resources\app.asar\editor-framework\lib\renderer\panel.js:1:2294)
    at EventEmitter.<anonymous> (D:\cocosCreator\CocosCreator\resources\app.asar\editor-framework\lib\renderer\ipc.js:1:5098)
    at emitMany (events.js:127:13)
    at EventEmitter.emit (events.js:201:7)
2017-07-01T07:00:50.057Z - failed: [db-task][sync-changes] Failed to import asset E:\games\start_project\assets\script\player.js, message: Compile error: SyntaxError: unknown: Unexpected token, expected , (21:4)
  19 |     }
  20 |     // use this for initialization
> 21 |     onLoad: function () {
     |     ^
  22 |         // 初始化跳跃动作
  23 |         this.jumpAction = this.setJumpAction();
  24 |         this.node.runAction(this.jumpAction);
    at Parser.pp$5.raise (D:\cocosCreator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4443:13)
    at Parser.pp.unexpected (D:\cocosCreator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1755:8)
    at Parser.pp.expect (D:\cocosCreator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1743:33)
    at Parser.pp$3.parseObj (D:\cocosCreator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3968:12)
    at Parser.pp$3.parseExprAtom (D:\cocosCreator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3709:19)
    at Parser.pp$3.parseExprSubscripts (D:\cocosCreator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3484:19)
    at Parser.pp$3.parseMaybeUnary (D:\cocosCreator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3464:19)
    at Parser.pp$3.parseExprOps (D:\cocosCreator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3394:19)
    at Parser.pp$3.parseMaybeConditional (D:\cocosCreator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3371:19)
    at Parser.pp$3.parseMaybeAssign (D:\cocosCreator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3334:19)
2017-07-01T07:01:27.797Z - normal: Compiled project javascript file successfully
2017-07-01T07:02:37.435Z - normal: Compiled project javascript file successfully
2017-07-01T07:03:55.634Z - normal: Compiled project javascript file successfully
2017-07-01T07:04:15.161Z - normal: Compiled project javascript file successfully
2017-07-01T07:04:42.816Z - normal: Compiled project javascript file successfully
2017-07-01T07:05:08.264Z - normal: Compiled project javascript file successfully
2017-07-01T07:06:04.903Z - normal: Compiled project javascript file successfully
2017-07-01T07:07:19.258Z - normal: Compiled project javascript file successfully
2017-07-01T07:08:27.456Z - normal: Compiled project javascript file successfully
2017-07-01T07:10:26.910Z - normal: Compiled project javascript file successfully
2017-07-01T07:15:03.817Z - normal: Compiled project javascript file successfully
2017-07-01T07:15:59.352Z - normal: Compiled project javascript file successfully
2017-07-01T07:16:30.716Z - normal: Compiled project javascript file successfully
2017-07-01T07:18:05.284Z - normal: Compiled project javascript file successfully
2017-07-01T07:18:37.690Z - normal: Compiled project javascript file successfully
2017-07-01T07:21:55.077Z - normal: Compiled project javascript file successfully
2017-07-01T07:22:12.081Z - normal: Compiled project javascript file successfully
2017-07-01T07:22:20.365Z - normal: Compiled project javascript file successfully
2017-07-01T07:22:56.823Z - normal: Compiled project javascript file successfully
2017-07-01T07:23:35.651Z - normal: Compiled project javascript file successfully
2017-07-01T07:23:56.946Z - normal: Compiled project javascript file successfully
2017-07-01T07:24:39.360Z - normal: Compiled project javascript file successfully
